# Ad-McQuery

./: .env.example  .gitignore  README.md  package-lock.json  pyproject.toml  requirements.txt
.claude/: settings.local.json
backend/: ImageAnalysisCriteria.md  VideoAnalysisCriteria.md  api.py  batch_analysis.py  batch_test.json  image_analysis.py  image_preprocess.py  main.py  main_old.py  prompts.json  requirements.txt  search_engine.py  test_api_output.json  test_gemini_analysis.json  test_output.json  test_output_medium.json  test_zip_output.json  video_analysis.py  video_preprocessing.py
backend/tests/: test_image_analysis.py  test_image_preprocess.py  test_output.json  test_results.json
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  STYLE_GUIDE.md  index.css
frontend/src/assets/videos/: DocMcQueryCapybaraSortingFiles.webm
frontend/src/components/: ProcessingPage.tsx  Sidebar.tsx  ViewPage.tsx
frontend/src/hooks/: useDatasets.ts
frontend/src/styles/: colors.css
frontend/src/types/: index.ts
